✨ feat(多语言调整): 调整多语言实现为单表实现
