# dto/translate-dto/TBaseDTO.ts
@@ -1,8 +1,0 @@
-import { Types } from "mongoose";
-import { ISoftDeleteDTO } from "../soft-delete-dto/ISoftDeleteDTO";
-
-export interface TBaseDTO extends ISoftDeleteDTO{
-	id: Types.ObjectId,
-	businessId: Types.ObjectId,
-	language: string,
-}
